[gd_scene load_steps=6 format=3 uid="uid://cogfecw22kcnq"]

[ext_resource type="PackedScene" uid="uid://5dfg3lg3hgu2" path="res://scenes/ui/interactable_ui.tscn" id="1_gsogw"]
[ext_resource type="Script" path="res://scripts/ui/upgrade_station_ui.gd" id="2_ahvhh"]
[ext_resource type="Texture2D" uid="uid://bcsww8xv1mcyn" path="res://assets/sprites/ui/arrow.png" id="3_ibf82"]
[ext_resource type="Texture2D" uid="uid://7me2jbrht5kd" path="res://assets/sprites/stefan_vulic.jpg" id="3_vschm"]
[ext_resource type="PackedScene" uid="uid://jv585hc5ojy6" path="res://scenes/ui/components/stat_upgrade_bar.tscn" id="5_s1yk5"]

[node name="InteractableUi" instance=ExtResource("1_gsogw")]
script = ExtResource("2_ahvhh")

[node name="ContentContainer" type="HBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 56.0
offset_right = -48.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InformationContainer" type="VBoxContainer" parent="PanelContainer/ContentContainer" index="0"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Overview" type="HBoxContainer" parent="PanelContainer/ContentContainer/InformationContainer" index="0"]
layout_mode = 2
alignment = 1

[node name="MaterialIcon" type="TextureRect" parent="PanelContainer/ContentContainer/InformationContainer/Overview" index="0"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="UpgradeButton" type="Button" parent="PanelContainer/ContentContainer/InformationContainer/Overview" index="1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
icon = ExtResource("3_ibf82")
flat = true
expand_icon = true

[node name="WeaponIcon" type="TextureRect" parent="PanelContainer/ContentContainer/InformationContainer/Overview" index="2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_vschm")
expand_mode = 1
stretch_mode = 5

[node name="StatsScrollContainer" type="ScrollContainer" parent="PanelContainer/ContentContainer/InformationContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/ContentContainer/InformationContainer/StatsScrollContainer" index="0"]
layout_mode = 2

[node name="StatUpgradeBar" parent="PanelContainer/ContentContainer/InformationContainer/StatsScrollContainer/StatsContainer" index="0" instance=ExtResource("5_s1yk5")]
layout_mode = 2

[node name="ItemsContainer" type="VBoxContainer" parent="PanelContainer/ContentContainer" index="1"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ContentContainer/ItemsContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="WeaponsGrid" type="GridContainer" parent="PanelContainer/ContentContainer/ItemsContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="ScrollContainer2" type="ScrollContainer" parent="PanelContainer/ContentContainer/ItemsContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="UpgradeItemsContainer" type="GridContainer" parent="PanelContainer/ContentContainer/ItemsContainer/ScrollContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 4

[connection signal="pressed" from="PanelContainer/ContentContainer/InformationContainer/Overview/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
